--- a/project.properties
+++ b/project.properties
@@ -11,10 +11,11 @@ mds_module.datasource.hikari.maximum-pool-size = 5
 mds_module.datasource.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 mds_module.datasource.hibernate.hbm2ddl.auto = validate
 
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=update
-
 #RATING_MODULE
+rating_module.server.address = 127.0.0.1
+rating_module.server.port = 8082
 
+rating_module.mongo.address = 127.0.0.1
+rating_module.mongo.port = 27017
+rating_module.mongo.database = dbmongo_hotelproject
 
